--- a/ableton/style/style.css
+++ b/ableton/style/style.css
@@ -10,7 +10,7 @@ p, h1,h2,h3,h4,h5,h6,span {
 
 header nav {
     width: 100%;
-    height: 5vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -203,7 +203,6 @@ footer .menu a:hover {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    height: 40px;
 }
 
 .menu2 {
@@ -238,4 +237,89 @@ footer .creator {
 
 .creator a {
     text-decoration: none;
+}
+
+@media only screen and (max-width: 600px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .left .logo {
+        font-size: 32px;
+        font-weight: 500;
+    }
+
+    .right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; align-items: center;
+    }
+
+    .navbar {
+        display: none;
+    }
+
+    .ableton-img {
+        width: 90%;
+        margin-top: 50px;
+    }
+
+    .intro-text {
+        max-width: 70%;
+        font-size: 2rem;
+    }
+
+    .images {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .images img {
+        width: 60% !important;
+        margin: 15px 0;
+    }
+
+    img {
+        width: 70% !important;
+    }
+
+    .outro-box {
+        width: 70%;
+    }
+
+    .outro-box h2 {
+        font-size: 1.5rem;
+    }
+
+    footer .menu {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin: 0 auto;
+        max-width: 70%;
+        word-wrap: normal;
+    }
+
+    .menu3 form input {
+        max-width: 30% 
+        !important;
+    }
+
+    footer .logo h1 {
+        font-size: 3rem;
+    }
+
+
+
 }
